src/main/resources/static/css/login.css
header {
    position: revert;
    width: revert;
}

main {
    padding: 0;
    background-attachment: unset;
}

.login {
    background-color: var(---mainBackground);
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.login .logReg-box {
    width: 50%;
    height: auto;
}

.login .form-box.login {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    background: none;
}

.login.register .form-box.login {
    display: none;
}

.login .form-box.register{
    display: none;
}

.login.register .form-box.register {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    background: none;
}

.logReg-box .logReg-title {
    text-align: center;
    margin: 1rem;
}

.logReg-title h2 {
    font-size: 2rem;
    margin-bottom: 1rem;
}

.logReg-box .input-box {
    position: relative;
    width: 100%;
    height: 50px;
    margin: 30px 0;
    border-bottom: 2px solid white;
}

.input-box input {
    width: 100%;
    height: 100%;
    border: none;
    outline: none;
    font-size: 16px;
    color: white;
    font-weight: 500;
    padding-right: 25px;
    background: transparent;
}

.input-box a {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    font-size: 16px;
    color: white;
    font-weight: 500;
    pointer-events: none;
    transition: .5s;
}

.input-box .password-mismatch {
    color: red;
}

.input-box input:focus~a,
.input-box input:valid~a {
    top: -5px;
}

.input-box .icon {
    position: absolute;
    top: 50%;
    right: 0;
    transform: translateY(-50%);
    color: white;
    font-size: 19px;
}

.logReg-box .remember-forgot {
    font-size: 14px;
    color: white;
    font-weight: 500;
    margin: -15px 0 15px;
    display: flex;
    justify-content: space-between;
}

.remember-forgot label a {
    pointer-events: none;
}

.remember-forgot a {
    color: white;
    text-decoration: none;
}

.remember-forgot a:hover {
    text-decoration: underline;
}

.logReg-box .terms-conditions {
    font-size: 14px;
    color: white;
    font-weight: 500;
    margin: -15px 0 15px;
    display: flex;
    justify-content: space-between;
}

.terms-conditions a {
    color: white;
    text-decoration: none;
}

.terms-conditions a:hover {
    text-decoration: underline;
}

.logReg-box .btn {
    width: 100%;
    height: 45px;
    background: white;
    border: none;
    outline: none;
    border-radius: 40px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
    cursor: pointer;
    font-size: 16px;
    color: black;
    font-weight: 600;
}

.logReg-box .logReg-link {
    font-size: 14px;
    color: white;
    text-align: center;
    font-weight: 500;
    margin: 25px 0 15px;
}

.logReg-link p a {
    color: white;
    font-weight: 600;
    pointer-events: visible;
}

.logReg-link p a:hover {
    text-decoration: underline;
}

